fixing the links in the main index html page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,42 @@
           <td>expanding cards</td>
           <td>11/08/2022</td>
           <td>
-            <a href="./pages/day_one/index.htm" class="links">Live link</a>
+            <a href="./pages/day_two/index.htm" class="links">Live link</a>
+          </td>
+        </tr>
+        <tr>
+          <td>expanding cards</td>
+          <td>11/08/2022</td>
+          <td>
+            <a href="./pages/day_three/index.htm" class="links">Live link</a>
+          </td>
+        </tr>
+        <tr>
+          <td>expanding cards</td>
+          <td>11/08/2022</td>
+          <td>
+            <a href="./pages/day_four/index.htm" class="links">Live link</a>
+          </td>
+        </tr>
+        <tr>
+          <td>expanding cards</td>
+          <td>11/08/2022</td>
+          <td>
+            <a href="./pages/day_five/index.htm" class="links">Live link</a>
+          </td>
+        </tr>
+        <tr>
+          <td>expanding cards</td>
+          <td>11/08/2022</td>
+          <td>
+            <a href="./pages/day_six/index.htm" class="links">Live link</a>
+          </td>
+        </tr>
+        <tr>
+          <td>expanding cards</td>
+          <td>11/08/2022</td>
+          <td>
+            <a href="./pages/day_seven/index.htm" class="links">Live link</a>
           </td>
         </tr>
         <tr>
@@ -42,63 +77,28 @@
           <td>expanding cards</td>
           <td>11/08/2022</td>
           <td>
-            <a href="./pages/day_one/index.htm" class="links">Live link</a>
+            <a href="./pages/day_eight/index.htm" class="links">Live link</a>
           </td>
         </tr>
         <tr>
           <td>expanding cards</td>
           <td>11/08/2022</td>
           <td>
-            <a href="./pages/day_one/index.htm" class="links">Live link</a>
+            <a href="./pages/day_nine/index.htm" class="links">Live link</a>
           </td>
         </tr>
         <tr>
           <td>expanding cards</td>
           <td>11/08/2022</td>
           <td>
-            <a href="./pages/day_one/index.htm" class="links">Live link</a>
+            <a href="./pages/day_ten/index.htm" class="links">Live link</a>
           </td>
         </tr>
         <tr>
           <td>expanding cards</td>
           <td>11/08/2022</td>
           <td>
-            <a href="./pages/day_one/index.htm" class="links">Live link</a>
-          </td>
-        </tr>
-        <tr>
-          <td>expanding cards</td>
-          <td>11/08/2022</td>
-          <td>
-            <a href="./pages/day_one/index.htm" class="links">Live link</a>
-          </td>
-        </tr>
-        <tr>
-          <td>expanding cards</td>
-          <td>11/08/2022</td>
-          <td>
-            <a href="./pages/day_one/index.htm" class="links">Live link</a>
-          </td>
-        </tr>
-        <tr>
-          <td>expanding cards</td>
-          <td>11/08/2022</td>
-          <td>
-            <a href="./pages/day_one/index.htm" class="links">Live link</a>
-          </td>
-        </tr>
-        <tr>
-          <td>expanding cards</td>
-          <td>11/08/2022</td>
-          <td>
-            <a href="./pages/day_one/index.htm" class="links">Live link</a>
-          </td>
-        </tr>
-        <tr>
-          <td>expanding cards</td>
-          <td>11/08/2022</td>
-          <td>
-            <a href="./pages/day_one/index.htm" class="links">Live link</a>
+            <a href="./pages/day_eleven/index.htm" class="links">Live link</a>
           </td>
         </tr>
       </table>
